# Szko-aPodstawowaNr1

./: Dockerfile  MainWindow.h  README.md  docker-compose-setup.yml  student_data.csv
Sh/: AttendanceManager.java  MainWindow.java  Student.java  getStudents.java  student_data.csv
untitled/: AttendanceManager.h  CMakeLists.txt  MainWindow.cpp  attendance_manager.cpp
